<resources>
    <string name="app_name">Laundry</string>
    <string-array name="jeniskelamin">
        <item>Perempuan</item>
        <item>Laki-Laki</item>
    </string-array>
    <string-array name="satuan">
        <item>Kilogram (Kg)</item>
        <item>Pieces (Pcs)</item>
    </string-array>
    <string-array name="role">
        <item>Pegawai</item>
        <item>Admin</item>
    </string-array>
    <string-array name="password">
        <item>pegawai123</item>
        <item>admin123</item>
    </string-array>
    <string name="tvCardPelangganId">Id Pelanggan</string>
    <string name="tvnamapelanggan">Nama Pelanggan</string>
    <string name="tvalamatpelanggan">Alamat</string>
    <string name="tvnohppelanggan">No HP</string>
    <string name="btHubungipelanggan">Hubungi</string>
    <string name="btLihatpelanggan">Lihat</string>
    <string name="tvCardPegawaiId">Id Pegawai</string>
    <string name="tvnamapegawai">Nama Pegawai</string>
    <string name="tvalamatpegawai">Alamat</string>
    <string name="tvnohppegawai">No HP</string>
    <string name="tvcabangpegawai">Cabang</string>
    <string name="btHubungipegawai">Hubungi</string>
    <string name="btLihatpegawai">Lihat</string>
    <string name="tvterdaftarpegawai">Terdaftar</string>
    <string name="tvterdaftarpelanggan">Terdaftar</string>
    <string name="tvsapa">Selamat Siang, Kristevi</string>
    <string name="tvjuduladdpelanggan">Tambah Pelanggan</string>
    <string name="tvnamaaddpelanggan">Nama Lengkap</string>
    <string name="etNameaddpelanggan">Masukan Nama Lengkap</string>
    <string name="tvalamataddpelanggan">Alamat</string>
    <string name="etAlamataddpelanggan">Masukan Alamat Lengkap</string>
    <string name="tvNoHpaddpelanggan">No HP</string>
    <string name="etNoHpaddpelanggan">Masukan No HP Aktif</string>
    <string name="buttonaddpelanggan">Simpan</string>
    <string name="tvjuduladdpegawai">Tambah Pegawai</string>
    <string name="tvnamaaddpegawai">Nama Lengkap</string>
    <string name="etNameaddpegawai">Masukan Nama Lengkap</string>
    <string name="tvalamataddpegawai">Alamat</string>
    <string name="etAlamataddpegawai">Masukan Alamat Lengkap</string>
    <string name="tvNoHpaddpegawai">No HP</string>
    <string name="etNoHpaddpegawai">Masukan No HP Aktif</string>
    <string name="tvCabangaddpegawai">Cabang</string>
    <string name="etCabangaddpegawai">Masukan Cabang</string>
    <string name="buttonaddapegawai">Simpan</string>
    <string name="tvestimasi">Estimasi Hari Ini</string>
    <string name="tvimg1dash">Transaksi</string>
    <string name="tvimg2dash">Pelanggan</string>
    <string name="tvimg3dash">Laporan</string>
    <string name="tvdesc">Siap melayani pelanggan dengan setulus hati</string>
    <string name="tvpesan">Jangan kecewakan pelanggan</string>
    <string name="tvcard2dash">Akun</string>
    <string name="tvcard3dash">Layanan</string>
    <string name="tvcard4dash">Tambahan</string>
    <string name="tvcard5dash">Pegawai</string>
    <string name="tvcard6dash">Cabang</string>
    <string name="tvcard7dash">Printer</string>
    <string name="validasi_alamat_pelanggan">Alamat tidak boleh kosong</string>
    <string name="validasi_nama_pelanggan">Nama tidak boleh kosong</string>
    <string name="validasi_noHP_pelanggan">No HP tidak boleh kosong</string>
    <string name="validasi_cabang_pelanggan">Cabang tidak boleh kosong</string>
    <string name="sukses_simpan_pelanggan">Sukses simpan pelanggan</string>
    <string name="gagal_simpan_pelanggan">Gagal simpan pelanggan</string>
    <string name="validasi_nama_pegawai">Nama tidak boleh kosong</string>
    <string name="validasi_alamat_pegawai">Alamat tidak boleh kosong</string>
    <string name="validasi_noHP_pegawai">No HP tidak boleh kosong</string>
    <string name="validasi_cabang_pegawai">Cabang tidak boleh kosong</string>
    <string name="sukses_simpan_pegawai">Sukses simpan pegawai</string>
    <string name="gagal_simpan_pegawai">Gagal simpan Pegawai</string>
    <string name="validasi_nama_cabang">Nama tidak boleh kosong</string>
    <string name="validasi_alamat_cabang">Alamat tidak boleh kosong</string>
    <string name="validasi_noHP_cabang">No HP tidak boleh kosong</string>
    <string name="validasi_layanan_cabang">Layanan tidak boleh kosong</string>
    <string name="sukses_simpan_cabang">Sukses simpan cabang</string>
    <string name="gagal_simpan_cabang">Gagal simpan cabang</string>
    <string name="validasi_nama_layanan">Nama layanan tidak boleh kosong</string>
    <string name="validasi_harga_layanan">Harga layanan tidak boleh kosong</string>
    <string name="validasi_cabang_layanan">Cabang tidak boleh kosong</string>
    <string name="sukses_simpan_layanan">Sukses simpan layanan</string>
    <string name="gagal_simpan_layanan">Gagal simpan layanan</string>
    <string name="validasi_nama_tambahan">Nama tambahan tidak boleh kosong</string>
    <string name="validasi_harga_tambahan">Harga tambahan tidak boleh kosong</string>
    <string name="sukses_simpan_tambahan">Sukses simpan tambahan</string>
    <string name="gagal_simpan_tambahan">Gagal simpan tambahan</string>
    <string name="tvcardidlayanan">ID Layanan</string>
    <string name="tvhargalayanan">Harga</string>
    <string name="tvcabanglayanan">Cabang</string>
    <string name="tvcardidcabang">ID Cabang</string>
    <string name="tvalamatcabang">Alamat</string>
    <string name="tvteleponcabang">Telepon</string>
    <string name="tvlayanancabang">Layanan yang tersedia</string>
    <string name="btHubungicabang">Hubungi</string>
    <string name="btLihatcabang">Lihat</string>
    <string name="tvCardTambahanId">ID Tambahan</string>
    <string name="tvhargatambahan">Harga</string>
    <string name="Data_Pegawai_Gagal_Diperbarui">Data Gagal Diperbarui</string>
    <string name="Data_Pegawai_Berhasil_Diperbarui">Data Pegawai Berhasil Diperbarui</string>
    <string name="tvjuduladdcabang">Tambah Cabang</string>
    <string name="tvjuduladdlayanan">Tambah Layanan</string>
    <string name="tvjuduladdtambahan">Tambahan</string>
    <string name="tvdatapelanggantransaksi">Data Pelanggan</string>
    <string name="tvnamapelanggantransaksi">Nama Pelanggan :</string>
    <string name="tvalamatpilihpelanggan">Alamat :</string>
    <string name="tvnohppilihpelanggan">No HP :</string>
    <string name="tvnamapilihpelanggan">Nama Pelanggan</string>
    <string name="tvnohppelanggantransaksi">No HP :</string>
    <string name="btnpilihpelanggantransaksi">Pilih Pelanggan</string>
    <string name="tvdatalayanantransaksi">Layanan Utama</string>
    <string name="tvnamalayanantransaksi">Nama Layanan :</string>
    <string name="tvhargalayanantransaksi">Harga :</string>
    <string name="btnpilihlayanantransaksi">Pilih Layanan</string>
    <string name="tvlayanantambahantransaksi">Layanan Tambahan</string>
    <string name="btntambahantransaksi">Tambahan</string>
    <string name="btnprosestransaksi">Proses</string>
    <string name="tvJudulKonfirmasiTransaksi">Konfirmasi Data</string>
    <string name="tvjudultotalbayar">Total Bayar</string>
    <string name="btnbataltransaksikonfirmasi">Batal</string>
    <string name="btnpembayarantransaksikonfirmasi">Pembayaran</string>
    <string name="tvidtransaksinota">ID Transaksi</string>
    <string name="tvtanggalnota">Tanggal</string>
    <string name="tvpelanggannota">Pelanggan</string>
    <string name="tvpegawainota">Pegawai</string>
    <string name="tvlayananutamanota">Layanan Utama</string>
    <string name="tvrinciantambahannota">Rincian Tambahan</string>
    <string name="tvsubtotaltambahannota">Subtotal Tambahan</string>
    <string name="tvtotalbayarnota">Total Bayar</string>
    <string name="btnkirimwhatsappnota">Kirim WhatsApp</string>
    <string name="btncetaknota">Cetak</string>
    <string name="tvJudulLayananTambahanKonfirmasi">Layanan Tambahan</string>
    <string name="tvjudulbayar">Pilih Metode Pembayaran</string>
    <string name="tvbayar">Bayar Nanti</string>
    <string name="tvbayar1">TUNAI</string>
    <string name="tvbayar2">QRIS</string>
    <string name="tvbayar3">DANA</string>
    <string name="tvbayar4">GoPay</string>
    <string name="tvbayar5">OVO</string>
    <string name="btnbatal">Batal</string>
    <string name="tvdetailpelangggan">Detail Pelanggan</string>
    <string name="tvidpelanggan">ID Pelanggan</string>
    <string name="tvcabangpelanggan">Cabang</string>
    <string name="buttonsuntingpelanggan">Sunting</string>
    <string name="buttonhapuspelanggan">Hapus</string>
    <string name="tvinformasiuser">Informasi Pengguna</string>
    <string name="tvnamaakun">Nama Lengkap</string>
    <string name="tvnamacabang">Cabang</string>
    <string name="tvnamatelepon">Telepon</string>
    <string name="tvkeamananuser">Keamanan</string>
    <string name="tvpasswordakun">Password</string>
    <string name="buttonedituser">Sunting</string>
    <string name="buttonlogoutuser">Keluar</string>
    <string name="selamatPagi">Selamat Pagi, %s</string>
    <string name="selamatSiang">Selamat Siang, %s</string>
    <string name="selamatSore">Selamat Sore, %s</string>
    <string name="selamatMalam">Selamat Malam, %s</string>
    <string name="tvsapalogin">Selamat Datang</string>
    <string name="tvdesclogin">Silahkan login untuk melanjutkan</string>
    <string name="tvnohplogin">Nomor HP</string>
    <string name="etnohplogin">Masukkan Nomor HP</string>
    <string name="tvpasswordlogin">Kata Sandi</string>
    <string name="etpasswordlogin">Masukka Kata Sandi</string>
    <string name="buttonlogin">Masuk</string>
    <string name="tvregisterlogin">Belum punya akun?</string>
    <string name="tvdescregister">Silahkan buat akun untuk melanjutkan</string>
    <string name="tvnamaregister">Nama Lengkap</string>
    <string name="etnamaregister">Masukkan Nama Lengkap</string>
    <string name="tvcabangregister">Cabang</string>
    <string name="etcabangregister">Masukkan Cabang</string>
    <string name="buttonregister">Daftar</string>
    <string name="tvloginregister">Sudah punya akun?</string>
    <string name="tvroleregister">Jabatan</string>
    <string name="tvjuduleditpelanggan">Edit Pelanggan</string>
    <string name="sunting">Sunting</string>
    <string name="simpan">Simpan</string>
    <string name="perbarui">Perbarui</string>
    <string name="tvjuduleditpegawai">Edit Pegawai</string>
    <string name="tveditlayanan">Edit Layanan</string>
    <string name="tveditcabang">Edit Cabang</string>
    <string name="Data_Gagal_Diperbarui">Data Gagal Diperbarui</string>
    <string name="Data_Berhasil_Diperbarui">Data Berhasil Diperbarui</string>
    <string name="idpelanggan">ID Pelanggan : %s</string>
    <string name="alamat">Alamat   : %s</string>
    <string name="telepon">Telepon   : %s</string>
    <string name="cabang">Cabang   : %s</string>
    <string name="whatsapp_message">Halo %s, saya ingin menghubungi Anda terkait Laundry.</string>
    <string name="whatsapp_not_installed">WhatsApp Tidak Terinstall</string>
    <string name="title_confirm_delete">Konfirmasi Hapus</string>
    <string name="message_confirm_delete">Apakah anda yakin ingin menghapus data ini?</string>
    <string name="button_delete">Hapus</string>
    <string name="delete_success">Data berhasil dihapus</string>
    <string name="delete_failed">Gagal menghapus data</string>
    <string name="invalid_id">ID tidak valid</string>
    <string name="button_cancel">Batal</string>
    <string name="layanan">Layanan   : %s</string>
    <string name="idcabang">ID Cabang : %s</string>
    <string name="idpegawai">ID Pegawai : %s</string>
    <string name="harga">Harga : Rp.%s</string>
    <string name="idtambahan">ID Tambahan : %s</string>
    <string name="tvjuduledittambahan">Edit Tambahan</string>
    <string name="idlayanan">ID Layanan : %s</string>
    <string name="btnSimpanedituser">Simpan Perubahan</string>
    <string name="tvjuduleditakun">Edit Data Pengguna</string>
</resources>