<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".akun.EditDataUserActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/tvjuduleditakun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvjuduleditakun"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/tvnamaedituser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvnamaregister"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/editnamauser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etnamaregister"
            android:background="@drawable/radius"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>
        <TextView
            android:id="@+id/tvnohpedituser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvnohplogin"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/editnohpuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etnohplogin"
            android:background="@drawable/radius"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>
        <TextView
            android:id="@+id/tvcabangedituser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvcabangregister"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/editcabanguser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etcabangregister"
            android:background="@drawable/radius"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>
        <Button
            android:id="@+id/btnSimpanedituser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/btnSimpanedituser"
            android:textColor="@color/white"
            android:backgroundTint="#254D70"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>