<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardpelanggan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    android:layout_marginTop="5dp"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvCardPelangganId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCardPelangganId"
            android:textStyle="bold"
            android:background="#75A0CA"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/tvnamapelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvnamapelanggan"
            android:paddingStart="10dp"
            android:paddingTop="10dp"/>
        <TextView
            android:id="@+id/tvnohppelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvnohppelanggan"
            android:paddingStart="10dp"
            android:paddingTop="5dp"/>
        <TextView
            android:id="@+id/tvalamatpelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvalamatpelanggan"
            android:paddingStart="10dp"
            android:paddingTop="5dp"/>
        <TextView
            android:id="@+id/tvterdaftarpelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvterdaftarpelanggan"
            android:paddingStart="10dp"
            android:paddingTop="5dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <Button
                android:id="@+id/btHubungipelanggan"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:text="@string/btHubungipelanggan"
                android:textStyle="bold"
                android:backgroundTint="#4B76CC"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>
            <Button
                android:id="@+id/btLihatpelanggan"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:text="@string/btLihatpelanggan"
                android:textStyle="bold"
                android:backgroundTint="#CC4B7F"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>