<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:src="@drawable/bg_login"
        android:alpha="0.50"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icons"/>
        <TextView
            android:id="@+id/tvsaparegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvsapalogin"
            android:textStyle="bold"
            android:textSize="26dp"
            android:layout_marginTop="30dp"/>
        <TextView
            android:id="@+id/tvdescregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvdescregister"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvnamaregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nama Lengkap"
            android:textSize="16sp"
            android:layout_marginTop="50dp"/>
        <EditText
            android:id="@+id/etnamaregister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/radius"
            android:hint="Masukan Nama Lengkap"
            android:inputType="none"
            android:layout_marginTop="5dp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/tvnohpregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvnohplogin"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/etnohpregister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/radius"
            android:hint="@string/etnohplogin"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/tvpasswordregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvpasswordlogin"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/etpasswordregister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/radius"
            android:hint="@string/etpasswordlogin"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/tvcabangregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvcabangregister"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/etcabangregister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/radius"
            android:hint="@string/etcabangregister"
            android:inputType="none"
            android:layout_marginTop="5dp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/tvroleregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvroleregister"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <Spinner
            android:id="@+id/sproleregister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/role"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/radius"/>
        <Button
            android:id="@+id/buttonregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonregister"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:backgroundTint="#254D70"/>
        <TextView
            android:id="@+id/tvloginregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvloginregister"
            android:textColor="#7B9BEB"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>