<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".pegawai.TambahPegawaiActivity">

    <TextView
        android:id="@+id/tvjuduladdpegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvjuduladdpegawai"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvnamaaddpegawai"/>
    <TextView
        android:id="@+id/tvnamaaddpegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvnamaaddpegawai"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvjuduladdpegawai"
        app:layout_constraintBottom_toTopOf="@+id/etNameaddpegawai"/>
    <EditText
        android:id="@+id/etNameaddpegawai"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/radius"
        android:hint="@string/etNameaddpegawai"
        android:inputType="none"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvnamaaddpegawai"
        app:layout_constraintBottom_toTopOf="@+id/tvalamataddpegawai"/>
    <TextView
        android:id="@+id/tvalamataddpegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvalamatpegawai"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etAlamataddpegawai"
        app:layout_constraintTop_toBottomOf="@+id/etNameaddpegawai"/>
    <EditText
        android:id="@+id/etAlamataddpegawai"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/radius"
        android:hint="@string/etAlamataddpegawai"
        android:inputType="none"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvalamataddpegawai"
        app:layout_constraintBottom_toTopOf="@+id/tvNoHpaddpegawai"/>
    <TextView
        android:id="@+id/tvNoHpaddpegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNoHpaddpegawai"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etNoHpaddpegawai"
        app:layout_constraintTop_toBottomOf="@+id/etAlamataddpegawai"/>
    <EditText
        android:id="@+id/etNoHpaddpegawai"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/radius"
        android:hint="@string/etNoHpaddpegawai"
        android:inputType="phone"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoHpaddpegawai"
        app:layout_constraintBottom_toTopOf="@+id/tvalamataddpegawai"/>
    <TextView
        android:id="@+id/tvCabangaddpegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvcabangpegawai"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etCabangaddpegawai"
        app:layout_constraintTop_toBottomOf="@+id/etNoHpaddpegawai"/>
    <EditText
        android:id="@+id/etCabangaddpegawai"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/radius"
        android:hint="@string/etCabangaddpegawai"
        android:inputType="none"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCabangaddpegawai"
        app:layout_constraintBottom_toTopOf="@+id/buttonaddpegawai"/>
    <Button
        android:id="@+id/buttonaddpegawai"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/buttonaddapegawai"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="#3272BF"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCabangaddpegawai"/>

</androidx.constraintlayout.widget.ConstraintLayout>