<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardpilihpelanggan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    android:layout_marginTop="5dp"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvpilihCardPelangganId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCardPelangganId"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#131D4F"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/tvnamapilihpelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvnamapilihpelanggan"
            android:textStyle="bold"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"/>
        <TextView
            android:id="@+id/tvalamatpilihpelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvalamatpilihpelanggan"
            android:paddingStart="10dp"
            android:paddingTop="5dp"/>
        <TextView
            android:id="@+id/tvnohppilihpelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvnohppilihpelanggan"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>